# PredictiveSelectionCoupledModels

./: Makefile.am  README.md  configure.ac
include/: compute.h  convert.h  coupled_OscillatorOCS_ForceOED.h  coupled_OscillatorOCS_ForceOLD.h  coupled_OscillatorOCS_ForceSED.h  coupled_OscillatorOCS_ForceSLD.h  coupled_OscillatorOLS_ForceOED.h  coupled_OscillatorOLS_ForceOLD.h  coupled_OscillatorOLS_ForceSED.h  coupled_OscillatorOLS_ForceSLD.h  coupled_OscillatorOQS_ForceOED.h  coupled_OscillatorOQS_ForceOLD.h  coupled_OscillatorOQS_ForceSED.h  coupled_OscillatorOQS_ForceSLD.h  forcingCommon.h  forcingOscillatoryExponentialDecay.h  forcingOscillatoryLinearDecay.h  forcingSimpleExponentialDecay.h  forcingSimpleLinearDecay.h  modelForcingOscillatoryExponentialDecay.h  modelForcingOscillatoryLinearDecay.h  modelForcingSimpleExponentialDecay.h  modelForcingSimpleLinearDecay.h  modelOscillatorCubicSpring.h  modelOscillatorLinearSpring.h  modelOscillatorQuinticSpring.h  oscillatorCommon.h  oscillatorCubicSpring.h  oscillatorLinearSpring.h  oscillatorQuinticSpring.h  tokenize.h  uqBagModels.h  uqDataSet.h  uqModel.h  uqModelLikelihood.h  uqModelQoI.h  uqParameter.h  uqStatsAlg.h
input_files/: forcing_meas.txt  oscillator_meas.txt  queso.inp
m4/: config_summary.m4
m4/common/: queso_ann.m4
matlab/: coupled_predictions.m  forcing_combined_qoi.m  forcing_predictions.m  getChainFile.m  oscillators_combined_qoi.m  oscillators_predictions.m  plotCumPlotsChain.m  test_convergence_chain.m  test_convergence_chain_act_val.m
matlab/generateData/: computeQoI_forcing.m  coupled_OQS_OED.m  generateData_forcing.m  generateData_oscillator.m  modelForcing_oscillatoryExponentialDecay.m  modelForcing_oscillatoryLinearDecay.m  modelForcing_simpleExponentialDecay.m  modelForcing_simpleLinearDecay.m  modelOscillator_cubicSpring.m  modelOscillator_linearSpring.m  modelOscillator_quinticSpring.m  potential_cubicSpring.m  potential_linearSpring.m  potential_quinticSpring.m
src/: Makefile.am  compute.C  main.C
tests/: Makefile.am  coupled_OLS_SED_funcs_test.C  forcing_OED_funcs_test.C  forcing_OLD_funcs_test.C  forcing_SED_funcs_test.C  forcing_SLD_funcs_test.C  models.sh  oscillator_OCS_funcs_test.C  oscillator_OLS_funcs_test.C  oscillator_OQS_funcs_test.C  testsCommon.h
